--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,69 +10,66 @@ name: Release and Upload Python Package on PyPI
 
 on:
   push:
+    branches:
+      - main
     tags:
       - '*'
 
 jobs:
     unit:
-      name: Unit Tests
-      uses: sensodevices/async-sendgrid/.github/workflows/unit.yaml@master
+      name: Call Unit Tests
+      uses: ./.github/workflows/unit.yaml
 
     typing:
-      name: Mypy
-      uses: sensodevices/async-sendgrid/.github/workflows/typing.yaml@master
+      name: Call Mypy
+      uses: ./.github/workflows/typing.yaml
 
     linting:
-      name: Flake8
-      uses: sensodevices/async-sendgrid/.github/workflows/linting.yaml@master
-
-    integration:
-        name: Integration Tests
-        uses: sensodevices/async-sendgrid/.github/workflows/integration.yaml@master
+      name: Call flake8
+      uses: ./.github/workflows/linting.yaml
 
     formatter:
-      name: Black
-      uses: sensodevices/async-sendgrid/.github/workflows/formatter.yaml@master
+      name: Call black
+      uses: ./.github/workflows/formatter.yaml
 
     release:
-      runs-on: ubuntu-latest
       name: Release version
-      needs: [unit, typing, linting, formatter, integration]
-
-      permissions:
-        contents: write
-
+      needs: [unit, typing, linting, formatter]
       steps:
         - name: Check out repository
           uses: actions/checkout@v3
-        - name: Initiate release
-          uses: ncipollo/release-action@v1
-          with:
-            artifacts: "release.tar.gz,foo/*.txt"
+        - name: Use local my-action
+          uses: ./.github/action/release.yaml
 
     deploy:
+      needs: [release]
       runs-on: ubuntu-latest
-      needs: release
-  
-      env:
-        environment: production
 
       permissions:
         contents: read
 
       steps:
-        - name: Set up Python & Poetry
-          uses: sensodevices/async-sendgrid/.github/actions/build_async_sendgrid@master
-          with:
-            poetry-version: "1.6.1"
-            python-version: "3.11.5"
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.11.5'
 
-        - name: Build package
-          run: poetry build
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: '1.6.1'
+          virtualenvs-create: false
+          virtualenvs-in-project: false
 
-        - name: Publish distribution 📦 to PyPI
-          uses: pypa/gh-action-pypi-publish@release/v1
-          with:
-            user: __token__
-            password: ${{ secrets.PYPI_API_TOKEN }}
-  
+      - name: Install Dependencies
+        run: poetry install --no-root
+
+      - name: Build package
+        run: poetry build
+
+      - name: Publish package
+        uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI_API_TOKEN }}
