--- a/.github/workflows/typing.yaml
+++ b/.github/workflows/typing.yaml
@@ -1,28 +1,30 @@
 name: Typing
 
-on: 
+on:
   push:
     branches:
-      - master
+      - main
       - dev
-
   pull_request:
     branches:
-      - master
+      - main
       - dev
-
-  workflow_call:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set up Python & Poetry
-        uses: sensodevices/async-sendgrid/.github/actions/build_async_sendgrid@master
+      # Downloads a copy of the code in your repository before running CI tests
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          poetry-version: "1.6.1"
-          python-version: "3.11.5"
+          python-version: '3.11'
+
+      - name: Install mypy and the required stubs
+        run: |
+          pip install mypy
 
       - name: Execute mypy
-        run:  poetry run mypy async-sendgrid
+        run: python -m mypy async_sendgrid
