--- a/.github/workflows/unit.yaml
+++ b/.github/workflows/unit.yaml
@@ -1,35 +1,43 @@
 name: Unit Tests
 
-on: 
+on:
   push:
     branches:
-      - master
+      - main
       - dev
-
   pull_request:
     branches:
-      - master
+      - main
       - dev
-  
-  workflow_call:
-
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    env:
+      POETRY_NO_INTERACTION: 1
+      PIP_DEFAULT_TIMEOUT: 100  
+
     steps:
-
-      - name: Set up Python & Poetry
-        uses: sensodevices/async-sendgrid/.github/actions/build_async_sendgrid@master
+      # Downloads a copy of the code in your repository before running CI tests
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          poetry-version: "1.6.1"
-          python-version: "3.11.5"
-          poetry-virtualenv: false
-          poetry-virtualenvs-in-project: false
+          python-version: '3.9.18'
 
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: '1.6.1'
+          virtualenvs-create: false
+          virtualenvs-in-project: false
+
+      - name: Install project
+        run: poetry install --no-root
 
       - name: Execute Pytest
-        run: poetry run python -m pytest --cov=async-sendgrid tests/unit
+        run: poetry run python -m pytest --cov=async_sendgrid tests/unit
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
