--- a/.github/workflows/formatter.yaml
+++ b/.github/workflows/formatter.yaml
@@ -10,6 +10,8 @@ on:
       - main
       - dev
 
+  workflow_call:
+      
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -20,7 +22,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: '3.12'
 
       - name: Install black
         run: pip install black
