--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 min_version = 4.0
 isolated_build = true
-envlist = py311, lint, type, format
+envlist = py312, lint, type, format
 skip_missing_interpreters = false
 
 [testenv]
@@ -21,4 +21,4 @@ commands =
 
 [testenv:format]
 commands =
-  poetry run black async_sendgrid
+  poetry run black --check async_sendgrid
