--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,9 +32,14 @@ jobs:
       name: Call black
       uses: ./.github/workflows/formatter.yaml
 
+    integration:
+      name: Call Integration Tests
+      uses: ./.github/workflows/integration.yaml
+
     release:
+      runs-on: ubuntu-latest
       name: Release version
-      needs: [unit, typing, linting, formatter]
+      needs: [unit, typing, linting, formatter, integration]
       steps:
         - name: Check out repository
           uses: actions/checkout@v3
