--- a/.github/workflows/typing.yaml
+++ b/.github/workflows/typing.yaml
@@ -9,6 +9,7 @@ on:
     branches:
       - main
       - dev
+  workflow_call:
 
 jobs:
   build:
@@ -20,7 +21,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: '3.12'
 
       - name: Install mypy and the required stubs
         run: |
