--- a/.github/workflows/unit.yaml
+++ b/.github/workflows/unit.yaml
@@ -10,6 +10,8 @@ on:
       - main
       - dev
 
+  workflow_call:
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -24,7 +26,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9.18'
+          python-version: '3.12.0'
 
       - name: Install Poetry
         uses: snok/install-poetry@v1
@@ -37,7 +39,7 @@ jobs:
         run: poetry install --no-root
 
       - name: Execute Pytest
-        run: poetry run python -m pytest --cov=async_sendgrid tests/unit
+        run: poetry run python -m pytest --cov=async_sendgrid tests
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
