--- a/.github/workflows/formatter.yaml
+++ b/.github/workflows/formatter.yaml
@@ -10,6 +10,8 @@ on:
       - main
       - dev
 
+  workflow_call:
+      
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -26,4 +28,4 @@ jobs:
         run: pip install black
 
       - name: Execute mypy
-        run: python -m black async_sendgrid
+        run: python -m black = async_sendgrid
