--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -18,16 +18,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Downloads a copy of the code in your repository before running CI tests
-      - uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.12'
+      - name: Setup the environment
+        uses: EM51641/async-sendgrid/.github/actions/build_app@dev
 
-      - name: Install flake8
-        run: pip install flake8
-
-      - name: Execute flake8
-        run: python -m flake8 async_sendgrid
+      - name: Check the linting
+        run: poetry run python -m flake8 async_sendgrid
