--- a/.github/workflows/typing.yaml
+++ b/.github/workflows/typing.yaml
@@ -16,16 +16,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Downloads a copy of the code in your repository before running CI tests
-      - uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.12'
+      - name: Setup the environment
+        uses: EM51641/async-sendgrid/.github/actions/build_app@dev
 
-      - name: Install mypy and the required stubs
-        run: |
-          pip install mypy
-
-      - name: Execute mypy
-        run: python -m mypy async_sendgrid
+      - name: Check the typing
+        run: poetry run python -m mypy async_sendgrid
