--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -20,7 +20,7 @@ jobs:
     steps:
 
       - name: Setup the environment
-        uses: EM51641/async-sendgrid/.github/actions/build_app@dev
+        uses: EM51641/async-sendgrid/.github/actions/build_app@main
 
       - name: Check the linting
         run: poetry run python -m flake8 async_sendgrid
