--- a/.github/workflows/typing.yaml
+++ b/.github/workflows/typing.yaml
@@ -17,7 +17,7 @@ jobs:
 
     steps:
       - name: Setup the environment
-        uses: EM51641/async-sendgrid/.github/actions/build_app@dev
+        uses: EM51641/async-sendgrid/.github/actions/build_app@main
 
       - name: Check the typing
         run: poetry run python -m mypy async_sendgrid
