--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,7 +58,7 @@ jobs:
 
       steps:
         - name: Setup the environment
-          uses: EM51641/async-sendgrid/.github/actions/build_app@dev
+          uses: EM51641/async-sendgrid/.github/actions/build_app@main
 
         - name: Install Dependencies
           run: poetry install --no-root
