Changed the tox config.

--- a/tox.ini
+++ b/tox.ini
@@ -9,16 +9,16 @@ allowlist_externals = poetry
 commands_pre =
     poetry install -vvv
 commands =
-  poetry run pytest tests/unit
+  poetry run python -m pytest tests/unit
 
 [testenv:type]
 commands =
-  poetry run mypy async_sendgrid
+  poetry run python -m mypy async_sendgrid
 
 [testenv:lint]
 commands =
-  poetry run flake8 async_sendgrid
+  poetry run python -m flake8 async_sendgrid
 
 [testenv:format]
 commands =
-  poetry run black --check async_sendgrid
+  poetry run python -m black --check async_sendgrid
