--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,34 +1,18 @@
 [tool.poetry]
-name = "async-sendgrid"
-version = "0.0.4"
-description = "SendGrid simple async client based on httpx."
+name = "sendgrid-async"
+version = "1.0.0"
+description = "SendGrid using a client based on httpx."
 license = "MIT"
-authors = ["Saltymakov Timofey <saltytimofey@gmail.com>"]
+authors = ["Elyes Mahjoubo <elyesmahjoubi@gmail.com>"]
 readme = "README.md"
-repository = "https://github.com/sensodevices/async-sendgrid"
-keywords = ["sendgrid", "utilities", "async"]
+repository = "https://github.com/EM51641/async-sendgrid/"
+keywords = ["sendgrid", "async", "httpx"]
 classifiers = [
-    "Intended Audience :: Information Technology",
-    "Intended Audience :: System Administrators",
     "Operating System :: OS Independent",
-    "Topic :: Internet",
-    "Topic :: Software Development :: Libraries :: Python Modules",
-    "Topic :: Software Development :: Libraries",
-    "Topic :: Software Development",
-    "Typing :: Typed",
-    "Development Status :: 3 - Alpha",
-    "Environment :: Web Environment",
-    "Framework :: AsyncIO",
-    "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
-    "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
-    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
-    "Topic :: Internet :: WWW/HTTP",
-    "Topic :: Utilities"
 ]
 
 packages = [
@@ -39,7 +23,6 @@ packages = [
 python = "^3.10"
 sendgrid = "^6.7.0"
 httpx = "^0.24.1"
-
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.2"
@@ -54,7 +37,6 @@ tox = "^4.11.1"
 [tool.black]
 line-length = 79
 
-
 [tool.coverage.report]
 exclude_also = [
     "if TYPE_CHECKING:",
@@ -63,4 +45,3 @@ exclude_also = [
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
