--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -76,5 +76,6 @@ jobs:
         - name: Publish package
           uses: pypa/gh-action-pypi-publish@release/v1
           with:
+            repository-url: https://test.pypi.org/legacy/
             user: __token__
             password: ${{ secrets.PYPI_TEST_API_TOKEN}}
