--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -50,8 +50,8 @@ jobs:
           with:
             repo_token: "${{ secrets.GITHUB_TOKEN }}"
             automatic_release_tag: "latest"
-            prerelease: false
-            title: "Production Build"
+            prerelease: true
+            title: "Development Build"
             files: |
               LICENSE.txt
               *.jar
