--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ packages = [
 python = "^3.10"
 sendgrid = "^6.7.0"
 httpx = "^0.24.1"
+certifi = "^2024.6.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.2"
