--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "sendgrid-async"
-version = "2.0.0"
+version = "2.0.1"
 description = "SendGrid using a client based on httpx."
 license = "MIT"
 authors = ["Elyes Mahjoubo <elyesmahjoubi@gmail.com>"]
@@ -35,6 +35,9 @@ mypy = "^1.0.0"
 flake8 = "^6.0.0"
 black = "^23.9.0"
 tox = "^4.11.1"
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.4"
 
 [tool.black]
 line-length = 79
