--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -33,7 +33,7 @@ jobs:
 
     steps:
       - name: Setup the environment
-        uses: EM51641/async-sendgrid/.github/actions/build_app@main
+        uses: ./.github/actions/build_app
         with:
           python-version: ${{ matrix.python-version }}
 
