--- a/.github/workflows/release-prod.yml
+++ b/.github/workflows/release-prod.yml
@@ -16,23 +16,23 @@ on:
 jobs:
   unit:
     name: Call unit tests
-    uses: EM51641/async-sendgrid/.github/workflows/unit.yaml@main
+    uses: ./.github/workflows/unit.yaml
 
   typing:
     name: Call mypy
-    uses: EM51641/async-sendgrid/.github/workflows/typing.yaml@main
+    uses: ./.github/workflows/typing.yaml
 
   linting:
     name: Call flake8
-    uses: EM51641/async-sendgrid/.github/workflows/linting.yaml@main
+    uses: ./.github/workflows/linting.yaml
 
   formatter:
     name: Call black
-    uses: EM51641/async-sendgrid/.github/workflows/formatter.yaml@main
+    uses: ./.github/workflows/formatter.yaml
 
   integration:
     name: Call integration tests
-    uses: EM51641/async-sendgrid/.github/workflows/integration.yaml@main
+    uses: ./.github/workflows/integration.yaml
 
   release:
     runs-on: ubuntu-latest
@@ -62,7 +62,7 @@ jobs:
 
     steps:
       - name: Setup the environment
-        uses: EM51641/async-sendgrid/.github/actions/build_app@main
+        uses: ./.github/actions/build_app
 
       - name: Install Dependencies
         run: poetry install --no-root
