--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -3,9 +3,9 @@ name: Integration Tests
 on:
   push:
     branches:
-      - main
-
+      - main    
   pull_request:
+    types: [opened, synchronize]
     branches:
       - dev
 
