--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,9 +10,19 @@ permissions:
 
 jobs:
 
-  build-and-upload:
+  test:
     runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.release.tag_name }}
 
+      - name: Run CI workflow
+        uses: ./.github/workflows/ci.yml
+
+  publish:
+    runs-on: ubuntu-latest
+    needs: test
     environment:
       name: release
       url: https://pypi.org/project/sendgrid-async/
