--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,6 +7,11 @@ on:
   pull_request:
     types: [opened, synchronize]
   workflow_call:
+    inputs:
+      ref:
+        required: false
+        type: string
+        default: ${{ github.ref }}
 
 jobs:
   ci:
@@ -25,6 +30,9 @@ jobs:
         python-version: ["3.10.13", "3.11.5", "3.12.0", "3.13.2"]
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ inputs.ref || github.ref }}
+          fetch-depth: 0
 
       - name: Setup the environment
         uses: ./.github/actions/build_env
