--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,19 +9,13 @@ permissions:
   contents: write
 
 jobs:
-
-  test:
-    runs-on: ubuntu-latest
-    steps:
-
-      - name: Run CI workflow
-        uses: ./.github/workflows/ci.yml
-        with:
-          ref: ${{ github.event.release.tag_name }}
+  ci:
+    name: Call CI
+    uses: ./.github/workflows/ci.yml
 
   publish:
     runs-on: ubuntu-latest
-    needs: test
+    needs: ci
     environment:
       name: release
       url: https://pypi.org/project/sendgrid-async/
