--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,13 +43,6 @@ jobs:
       - name: Build distribution
         run: poetry build
 
-      - name: Sign the dists with Sigstore
-        uses: sigstore/gh-action-sigstore-python@v3.0.0
-        with:
-            inputs: >-
-              ./dist/*.tar.gz
-              ./dist/*.whl
-
       - name: Upload distribution files
         uses: softprops/action-gh-release@v2
         with:
@@ -60,3 +53,10 @@ jobs:
 
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
+
+      - name: Sign the dists with Sigstore
+        uses: sigstore/gh-action-sigstore-python@v3.0.0
+        with:
+          inputs: >-
+            dist/*.tar.gz
+            dist/*.whl
