--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
 name = "sendgrid-async"
-version = "2.0.3"
+version = "2.0.4"
 description = "SendGrid using a client based on httpx."
 license = "MIT"
-authors = ["Elyes Mahjoubo <elyesmahjoubi@gmail.com>"]
+authors = ["Elyes Mahjoubi <elyesmahjoubi@gmail.com>"]
 readme = "README.md"
-repository = "https://github.com/EM51641/async-sendgrid/"
+repository = "https://github.com/EM51641/async-sendgrid-"
 keywords = ["sendgrid", "async", "httpx"]
 classifiers = [
     "Operating System :: OS Independent",
@@ -29,18 +29,14 @@ include = [
 python = "^3.10"
 sendgrid = "^6.7.0"
 httpx = "^0.24.1"
-certifi = "^2024.6.2"
-toml = "^0.10.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.2"
 pytest-asyncio = "^0.15.1"
 pytest-cov = "^4.0.0"
-pytest-httpx="^0.24.0"
 mypy = "^1.0.0"
 flake8 = "^6.0.0"
 black = "^23.9.0"
-tox = "^4.11.1"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.4"
