--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,9 @@ include = [
 python = "^3.10"
 sendgrid = "^6.7.0"
 httpx = "^0.24.1"
+opentelemetry-api = "^1.34.0"
+opentelemetry-sdk = "^1.34.0"
+opentelemetry-exporter-otlp-proto-grpc = "^1.34.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.2"
