--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,3 +52,12 @@ exclude_also = [
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[project.optional-dependencies]
+test = [
+    "pytest>=7.0.0",
+    "pytest-asyncio>=0.21.0",
+    "pytest-cov>=4.1.0",
+    "opentelemetry-sdk>=1.20.0",
+    "opentelemetry-api>=1.20.0",
+]
