--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,9 @@ mypy = "^1.0.0"
 flake8 = "^7.2.0"
 black = "^25.1.0"
 
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.5"
+
 [tool.black]
 line-length = 79
 
